# WLPlayer

./: build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zl/ffmpegmusicplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ZAudio.cpp  ZAudio.h  ZCallJava.cpp  ZCallJava.h  ZFFmpeg.cpp  ZFFmpeg.h  ZLog.h  ZPlaystatus.cpp  ZPlaystatus.h  ZQueen.cpp  ZQueen.h  ZVideo.cpp  ZVideo.h  native-lib.cpp
app/src/main/java/com/zl/ffmpegmusicplayer/: MainActivity.kt
app/src/main/java/com/zl/ffmpegmusicplayer/listener/: IPlayListener.kt  PlayListener.kt  WlOnParparedListener.kt
app/src/main/java/com/zl/ffmpegmusicplayer/musicui/model/: MusicData.java
app/src/main/java/com/zl/ffmpegmusicplayer/musicui/utils/: DisplayUtil.java  FastBlurUtil.java
app/src/main/java/com/zl/ffmpegmusicplayer/musicui/widget/: BackgourndAnimationRelativeLayout.java  DiscView.java
app/src/main/java/com/zl/ffmpegmusicplayer/opengl/: HGLSurfaceView.java  HRender.java  ShaderUtils.java  ZGLSurfaceView.kt  ZRender.kt
app/src/main/java/com/zl/ffmpegmusicplayer/player/: ZPlayer.kt
app/src/main/res/layout/: activity_main.xml  layout_discview.xml
app/src/main/res/raw/: base_frag.frag
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/zl/ffmpegmusicplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
